--- a/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
+++ b/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
@@ -86,11 +86,11 @@
           </li>
 
           <!-- Nueva pestaña "Notificaciones" -->
-          <li *ngIf="isCliente() || isAdministrador()">
+          <!-- <li *ngIf="isCliente() || isAdministrador()">
             <button mat-icon-button routerLink="/dashboard/Notificacion/Notificar">
               <mat-icon style="vertical-align: middle;">notifications</mat-icon>
             </button>
-          </li>
+          </li> -->
 
           <li class="nav-item">
             <button mat-button [matMenuTriggerFor]="userMenu">
@@ -114,9 +114,9 @@
               <!-- Submenú "Información Personal" -->
               <button mat-menu-item routerLink="/dashboard/Perfil/User">Información Personal</button>
               <!-- Submenú "Datos de la Cuenta" -->
-              <button mat-menu-item routerLink="/datos-cuenta">Datos de la Cuenta</button>
+              <!-- <button mat-menu-item routerLink="/datos-cuenta">Datos de la Cuenta</button> -->
               <!-- Submenú "Seguridad" -->
-              <button mat-menu-item routerLink="/Seguridad">Seguridad</button>
+              <!-- <button mat-menu-item routerLink="/Seguridad">Seguridad</button> -->
               <!-- Submenú "Direcciones" -->
               <button mat-menu-item routerLink="/dashboard/Address/direccion_lista">Direcciones</button>
               <mat-divider></mat-divider>
