--- a/fronted/src/app/components/ventas/ventas/ventas.component.html
+++ b/fronted/src/app/components/ventas/ventas/ventas.component.html
@@ -63,6 +63,7 @@
           {{ direccion.municipio || 'No disponible' }}.
           {{ direccion.estado || 'No disponible' }}.
           {{ direccion.codigoPostal || 'No disponible' }}</p>
+         <p> Contacto: {{ direccion.numeroContacto || 'No disponible' }}</p>
       </ng-container>
     </ng-container>
 
